# first-fit

./: .gitignore  flake.nix
demo/: .clang-format  CMakeLists.txt
demo/src/: main.cxx
